make sure timer displays the correct starting time, fix alignment of accordion, and make sure percentage is in correct bounds

--- a/src/app/containers/results/results.component.scss
+++ b/src/app/containers/results/results.component.scss
@@ -13,6 +13,9 @@ section.results {
   h3, p, .quiz-summary-link, #quizAccordion {
     text-align: center;
   }
+  #quizAccordion {
+    margin-top: 10px;
+  }
   button {
     text-decoration: none;
     font-weight: $font-weight-max;
